--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 </head>
 <body style="background-color:#323639">
 
-    <canvas id="imgInput"></canvas>
-    <canvas id="imgOutput"></canvas>
-    <script src="main.js"></script>
+    <canvas id="original"></canvas>
+    <canvas id="grayscale"></canvas>
 
+    <script src="main.js"></script>
+    <script src="filters.js"></script>
 
 </body>
 </html>
