--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 
     <canvas id="original"></canvas>
     <canvas id="grayscale"></canvas>
+    <canvas id="sobel"></canvas>
 
     <script src="main.js"></script>
     <script src="filters.js"></script>
+    <script src="sobel.js"></script>
 
 </body>
 </html>
