--- a/index.html
+++ b/index.html
@@ -8,12 +8,16 @@
 <body style="background-color:#323639">
 
     <canvas id="original"></canvas>
+    <canvas id="blurred"></canvas>
     <canvas id="grayscale"></canvas>
     <canvas id="sobel"></canvas>
+    <canvas id="prewitt"></canvas>
+    <canvas id="roberts"></canvas>
+    <canvas id="laplacian"></canvas>
 
     <script src="main.js"></script>
     <script src="filters.js"></script>
-    <script src="sobel.js"></script>
+    <script src="convolutions.js"></script>
 
 </body>
 </html>
