--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>home</title>
+    <title>Edge Detection</title>
+    <link rel="icon"  type="image/x-icon" href="favicon.ico"/>
 </head>
 <body style="background-color:#323639">
 
@@ -14,6 +15,8 @@
     <canvas id="prewitt"></canvas>
     <canvas id="roberts"></canvas>
     <canvas id="laplacian"></canvas>
+    <canvas id="blurredLaplacian"></canvas>
+    <canvas id="canny"></canvas>
 
     <script src="main.js"></script>
     <script src="filters.js"></script>
