--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 </head>
 <body style="background-color:#323639">
 
+    <label class="custom-file-upload">
+        <input type="file" id="file">
+    </label>
+
     <div class="container">
         <div class="box">
             <p>Original</p>
