figure of merit

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
     <script src="main.js"></script>
     <script src="filters.js"></script>
     <script src="convolutions.js"></script>
+    <script src="xfom.js"></script>
 
 </body>
 </html>
