--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
     </div>
 
-    <p align="center">Figure of Merit (similarity between operators)</p>
+    <p align="center">Figure of Merit (similarity matrix)</p>
     <div id="tabela" align="center"></div>
 
     <script src="lib/main.js"></script>
