--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 </head>
 <body>
 
-    <input type="file" id="file">
-
+    <div class="topContainer">
+        <input type="file" id="file">
+        <a href="https://github.com/xandjiji/edge-detection" target="_blank">GitHub</a>
+    </div>
     <div class="container">
         <div class="box">
             <p>Original</p>
